# PSOD

./: README.md  pyproject.toml
Example notebooks/: Outlier detection using PSOD and Isolation Forest on IEEE-CIS fraud dataset.ipynb  Outlier detection using PSOD and Isolation Forest on credit card fraud.ipynb  Outlier detection with linear synthetic data.ipynb
outlier-detection/: psod.py
psod/outlier_detection/: psod.py
psod/preprocessing/: full_preprocessing.py  reduce_memory_footprint.py  scale.py
