[tool.poetry]
name = "psod"
version = "0.0.3"
description = "Outlier detection using supervised methods in a supervised context"
authors = ["Thomas Meißner <meissnercorporation@gmx.de>"]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
homepage = "https://github.com/ThomasMeissnerDS/PSOD"
repository = "https://github.com/ThomasMeissnerDS/PSOD"
readme = "README.md"
packages = [
    { include = "psod" },
]

[tool.poetry.dependencies]
python = ">=3.7,<=3.10"
category_encoders = ">= 2.3.0" # changed to also include newer versions
numpy = "^1.19.4"
pandas = "^1.1.5"
scikit-learn = "^1.0.1"
tqdm = "^4.00.0"


[tool.poetry.dev-dependencies]
ipython = "^7.10.0"
jupyter_core = "^4.7.0"
pytest = "^6.2.5"
setuptools = "51.1.0"
twine = "1.13.0"
wheel = "0.36.2"
Sphinx = "^4.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"